welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:4: error: not found: value faireFleur
	faireFleur(Color.RED)
        ^FlowerCase:5: error: not found: value faireFleur
	faireFleur(Color.CYAN)
        ^FlowerCase:6: error: not found: value faireFleur
	faireFleur(Color.GREEN)
        ^FlowerCase:7: error: not found: value faireFleur
	faireFleur(Color.PINK)
        ^