welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def growFlowers()=
{
	faireFleur(Color.RED)
	faireFleur(Color.CYAN)
	faireFleur(Color.GREEN)
	faireFleur(Color.PINK)

	avance()
	avance()
	avance()
	droite()
	avance()	
}


def faireFleure(c:Color)=
{
	setCouleurBrosse(c)
	baisseBrosse()
	avance()
	avance()
	recule()
	gauche()
	avance()
	recule()
	recule()
	leveBrosse()
	avance()
	setCouleurBrosse(Color.YELLOW)
	baisseBrosse()
	leveBrosse()
	droite()
	avance()
	avance()
	gauche()
	recule()
	recule()
	recule()
	
}